# SpeechRecognizer

./: README.md  recognition_132599196635568.txt  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: punctuation_model.tflite
app/src/main/cpp/: CMakeLists.txt  inject.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
google-speech-protobuf/: build.gradle
google-speech-protobuf/src/main/java/greco/: AcousticModelParamsOuterClass.java  AcousticNbestRescorerParamsOuterClass.java  AppendClusteridStreamParams.java  AttentionOuterClass.java  AudioDecoderStreamParamsOuterClass.java  AudioDiagnostics.java  AudioMixer.java  AugmentedSymbolTableParamsOuterClass.java  AutoGainControl.java  BackendRecognizerEventWrapperOuterClass.java  BufferedScoreCacheParamsOuterClass.java  CapitalizationMaskNormalizer.java  Cepstrum.java  CepstrumNorm.java  ChannelParamsOuterClass.java  ClassNormalizerParamsOuterClass.java  CombinedResultStream.java  ConfidenceParamsOuterClass.java  ContactsModelParamsOuterClass.java  ContextAwareModelListParamsOuterClass.java  ContextSessionResourceParams.java  ContextualDenormOuterClass.java  ContinuousSpeakeridStreamParams.java  DarwinnDelegateOptions.java  DecoderEndpointerModelFeatureBuilderParamsOuterClass.java  (+169 more)
gradle/wrapper/: gradle-wrapper.properties
resample/: build.gradle
resample/src/main/: AndroidManifest.xml
resample/src/main/cpp/: CMakeLists.txt  common.h  fastest_coeffs.h  mid_qual_coeffs.h  resample.c  samplerate.c  src_linear.c  src_sinc.c  src_zoh.c
(+511 files in other folders)
